# paper-radar

./: .env.example  .gitignore  LOGS.md  README.md  pyproject.toml
archive/: 2026-04-17-asmr-bench-auditing-for-sabotage-in-ml-research.md  2026-04-17-using-large-language-models-and-knowledge-graphs-to-improve.md  2026-04-20-agentic-forecasting-using-sequential-bayesian-updating-of.md  2026-04-20-diversity-collapse-in-multi-agent-llm-systems-structural-and.md  2026-04-20-exai5g-a-logic-based-explainable-ai-framework-for-intrusion.md  2026-04-20-when-can-llms-learn-to-reason-with-weak-supervision.md  2026-04-21-ai-economics-for-the-common-good.md  2026-04-21-chat2workflow-a-benchmark-for-generating-executable-visual.md  2026-04-21-faster-value-guided-sampling-for-fast-rl.md  2026-04-21-learning-to-be-uncertain-before-learning-from-data.md  2026-04-21-permethrin-treated-baby-wraps-for-the-prevention-of-malaria.md  2026-04-22-avise-framework-for-evaluating-the-security-of-ai-systems.md  2026-04-22-brain-inspired-warm-up-training-with-random-noise-for.md  2026-04-22-linear-attention-goes-global-in-molecular-dynamics.md  2026-04-22-relative-principals-pluralistic-alignment-and-the-structural.md  2026-04-23-competing-biases-underlie-overconfidence-and-underconfidence.md  2026-04-23-from-research-question-to-scientific-workflow-leveraging-ai.md  2026-04-23-molecular-deep-learning-at-the-edge-of-chemical-space.md  2026-04-23-nemobot-games-crafting-strategic-ai-gaming-agents-for-with.md  2026-04-23-seeing-fast-and-slow-learning-the-flow-of-time-in-videos.md  (+386 more)
src/: config.py  (+9 more)
(+15 files in other folders)
