[project]
name = "paper-radar"
version = "0.1.0"
description = "Daily AI-curated high-IF paper digest with Telegram delivery."
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "pydantic>=2.9.0",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.1",
    "python-slugify>=8.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.1",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
